--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Template React Typesript</title>
+    <title>Smash or pass</title>
     <script type="text/Javascript" src="%PUBLIC_URL%/env/Config.js"></script>
   </head>
   <body>
